# E3onCANserver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.can-vcan1.yml  docker-compose.can.yml  docker-compose.doip.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
config/: devices.json  devices_collect.json  devices_service77.json  devices_vcan1.json
data/: virtdata_680.txt  virtdata_6a1.txt
docker/: entrypoint.sh  start-can-vcan1.sh  start-can.sh  start-doip.sh
docs/: protocol.md  protocols.md
simulator/: __init__.py  bus.py  cyclic.py  datastore.py  device.py  doip.py  energy_meter.py  faults.py
simulator/protocol/: __init__.py  base.py  collect.py  encoders.py  isotp.py  protocol.md  service77.py  uds.py
tests/: test_collect.py  test_datastore.py  test_doip.py  test_faults.py  test_isotp.py  test_service77.py  test_uds.py
